<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_error"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            app:tint="@color/title" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:textColor="@color/title"
            android:fontFamily="@font/poppins_medium"
            android:textSize="@dimen/label"
            android:textAlignment="center"
            android:text="@string/message_dialog_capacity"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/yes_button"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_button"
                android:layout_marginStart="@dimen/title"
                android:text="@string/yes"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/No_button"
                android:layout_marginStart="@dimen/title"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_button"
                android:text="@string/no"
                style="@style/ButtonStylethree"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>