<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin"
            android:orientation="vertical"
            android:fitsSystemWindows="true">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:layout_gravity="center"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/input_margin_bottom"
                android:hint="@string/observation">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/note"
                    style="@style/InputTextFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_button_size"
                android:text="@string/save_button"
                style="@style/ButtonStyle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_button_size"
                android:text="@string/cancel"
                style="@style/ButtonStyle"
                android:backgroundTint="@color/white"
                android:textColor="@color/title"/>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>