<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scroll_capacity_canceled"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:layout_marginBottom="@dimen/input_margin_bottom"
                android:fitsSystemWindows="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/multiline_text_novelty"
                    android:textColor="@color/title"
                    android:textSize="@dimen/title" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_size"
                    android:hint="@string/alternate_company"
                    style="@style/DropDownLayoutStyle"
                    android:layout_marginBottom="@dimen/input_margin_bottom">

                    <AutoCompleteTextView
                        android:id="@+id/alternative_company_capacity_cancel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        style="@style/InputTextFont"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_size"
                    android:hint="@string/alternating_company_meter"
                    style="@style/EditTextInputLayoutStyle"
                    android:layout_marginBottom="@dimen/input_margin_bottom">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/alternatingcompanymeter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        style="@style/InputTextFont"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/search_map_capacity_canceled"
                    style="@style/ButtonStyle"
                    android:layout_width="48dp"
                    android:layout_height="@dimen/input_size"
                    android:layout_marginStart="@dimen/margin_button_map"
                    android:layout_marginTop="-74dp"
                    app:icon="@drawable/search_item"
                    app:iconGravity="textTop"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/input_margin_bottom"
                    android:padding="@dimen/input_margin_bottom">

                    <Button
                        android:id="@+id/add_button"
                        android:layout_width="@dimen/input_size"
                        android:layout_height="@dimen/input_size"
                        android:layout_marginStart="@dimen/width_edittext_novelty"
                        android:layout_marginTop="580dp"
                        android:background="@drawable/background_button_cir"
                        android:text="+"
                        android:textSize="@dimen/title" />

                    <Button
                        android:id="@+id/show_location_button"
                        android:layout_width="@dimen/input_size"
                        android:layout_height="@dimen/input_size"
                        android:layout_marginStart="@dimen/width_edittext_novelty"
                        android:drawableEnd="@drawable/ic_location_on"
                        android:background="@drawable/background_button_cir"
                        android:textSize="@dimen/title" />

                    <com.esri.arcgisruntime.mapping.view.MapView
                        android:id="@+id/map"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="@dimen/input_margin_bottom"
                        android:layout_height="650dp"/>

                </androidx.coordinatorlayout.widget.CoordinatorLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>